Prevent vertical scrollbar in report dialog

--- a/samples/web/content/testrtc/css/main_nolint.css
+++ b/samples/web/content/testrtc/css/main_nolint.css
@@ -15,3 +15,7 @@ html /deep/ paper-dialog,
 html /deep/ paper-action-dialog {
   top: 2em;
 }
+
+html /deep/ #bug-report {
+  overflow: hidden;
+}
